# MProvePlus-Ristretto

./: .gitignore  1000_100.txt  5000_45.txt  Cargo.toml  latest-output-22082020.txt  log-1.txt  log-2.txt  log-combined.txt  mprove-log.txt  mproveplus-updated-log.txt  output_80000.txt  run-mproveplus-2.sh  run-mproveplus-combined.sh
benches/: mproveplus_bench.rs
scripts/: run-mproveplus-1.sh  run-omnires-combined.sh  run-omnires_v2-combined.sh
sim_logs/march2021/: omnires-log-16032021.txt  omnires-log.txt  omnires_v2-log-16032021.txt
sim_logs/old/: 5000_45.txt  latest-outputs.txt
src/: errors.rs  generators.rs  lib.rs  transcript.rs  util.rs
src/proofs/: inner_product.rs  inner_product1.rs  mod.rs  mprove_plus.rs  mprove_plus_ristretto.rs  omnires.rs  omnires_v2.rs
