[package]
name = "mProvePlus-ristretto"
version = "0.2.0"
authors = [
    "Suyash Bagad <suyashbagad@iitb.ac.in>",
]

[lib]
crate-type = ["lib"]

[dependencies]
itertools = "0.7.8"
serde = "1.0"
serde_derive = "1.0"
rand = "0.7.3"
libc = "0.2.45"
flame = "0.2.2"
curve25519-dalek = { version = "2", default-features = false, features = ["u64_backend", "nightly", "serde", "alloc"] }
sha2 = "0.8.1"
structopt = "0.2"
sha3 = "0.8.2"
bulletproofs = "2.0.0"
merlin = { version = "2", default-features = false }
digest = "0.8.1"
byteorder = { version = "1", default-features = false }
libc-print = "0.1.13"
time = { version = "0.1.25"}
to-binary = "0.4.0"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "mproveplus_bench"
path = "benches/mproveplus_bench.rs"
harness = false

